--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-wysiwyg": "^2.1.1",
     "react-tinder-card": "^1.5.0",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
